# us-options-agent

./: .env.example  .gitignore  README.md  __init__.py  pyproject.toml  run_agent.py
agent/: core.py  prompts.py
backtest/: engine.py
config/: __init__.py
examples/: basic_usage.py
market/: broker.py  data.py  futu_broker.py  futu_data.py
strategies/: options.py  risk.py
